--- a/JimmyjeviStripi/JimmyjeviStripi/JimmyjeviStripi.csproj
+++ b/JimmyjeviStripi/JimmyjeviStripi/JimmyjeviStripi.csproj
@@ -122,6 +122,10 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Podrobnosti.xaml.cs">
+      <DependentUpon>Podrobnosti.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PodrobnostiPoizvedbe.cs" />
     <Compile Include="PoizvedbaManager.cs" />
     <Compile Include="PoizvedbaStripov.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -155,6 +159,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Podrobnosti.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
